# monlin

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: package-release.sh  test-i3bar.sh
src/: color.rs  config.rs  layout.rs  lib.rs  main.rs  metrics.rs  render.rs
tests/: cli.rs
